add styles to pages